bug fix scroll, alignment icons, linkedIn email

--- a/src/components/EmailClient.css
+++ b/src/components/EmailClient.css
@@ -1,11 +1,11 @@
 .nav-links {
   list-style-type: none;
+  margin-top: 40px;
 }
 
 .button-links {
   float: left;
   margin: 5px;
-  padding-top: 10px;
   list-style-type: none;
 }
 
@@ -28,7 +28,7 @@
 
 .NavBar {
   height: 70px;
-  position: fixed;
+  position: sticky;
 }
 
 .ProfileBox {
